css/styles.css
/* ... */
html,
body {
    height: 100%;
}

body {
    transition: opacity .5s ease;
    opacity: 0;
    display: flex;
    flex-direction: column;
    min-height: calc(var(--vh, 1vh) * 100);
}

main,
nav {
    flex: 1 0 auto;
    width: 80%;
    margin: 0 auto;
}

:focus-visible {
    outline: 4px solid var(--orange);
    border-radius: 5px;
}

a,
a:visited {
    color: currentColor;
    text-decoration: none;
}

button {
    border: none;
    background-color: transparent;
    color: currentColor;
}

main,
nav {
    transition: opacity .5s ease;
}

.light {
    background-color: var(--white);
    color: var(--dark-blue);
}

.light #pop-up-box {
    box-shadow: 4px 4px 10px var(--dark-blue), -4px -4px 10px var(--dark-blue), 4px -4px 10px var(--dark-blue), -4px 4px 10px var(--dark-blue);
}

.dark {
    background-color: var(--dark-blue);
    color: var(--white);
}


.dark #pop-up-box {
    box-shadow: 4px 4px 10px var(--grey), -4px -4px 10px var(--grey), 4px -4px 10px var(--grey), -4px 4px 10px var(--grey);
}

body.unica,
body.unica footer p {
    font-family: 'Unica One', sans-serif;
}

body.unica p {
    font-family: 'Quicksand', sans-serif;
}

body.quicksand {
    font-family: 'Quicksand', sans-serif;
}

p {
    font-weight: 500;
}

.home-link,
.about-button,
.nav-link,
.photo-overlay a,
form,
#send-button,
footer p {
    font-weight: 600;
}

.hidden {
    display: none;
}

button,
a,
.close,
.project-container {
    cursor: pointer;
}

button {
    font-family: inherit;
}

.break-word {
  display: inline;
}

/* ============================================================================================================
                                                
                                        RESPONSIVE FONT-SIZING

===============================================================================================================*/

h1 {
    font-size: clamp(2rem, 3.9vw, 2.5rem);
}

p {
    font-size: clamp(.9rem, 2.3vw, 1.25rem);
}

footer p {
    font-size: clamp(0.75rem, 1.6vw, 1rem);
}

nav li {
    font-size: clamp(2rem, 4.7vw, 3rem);
}

.header-icon {
    font-size: clamp(1.75rem, 3.5vw, 2.25rem);
}

.home h1 {
    font-size: clamp(1.3rem, 3.5vw, 2.25rem);
}

#full-name {
    font-size: clamp(1.75rem, 4.7vw, 3rem);
}

#nickname {
    font-size: clamp(2rem, 5.5vw, 3.5rem);
}

.home h2 {
    font-size: clamp(1.1rem, 2.8vw, 1.8rem);
}

.about-button,
.home-link {
    font-size: clamp(1.2rem, 3vw, 1.9rem);
}

.photo-overlay h2 {
    font-size: clamp(1.3rem, 2.3vw, 1.5rem);
}

.photo-overlay a {
    font-size: clamp(1rem, 1.9vw , 1.2rem);
}
.photo-overlay p {
    font-size: clamp(.9rem, 1.7vw, 1.1rem);
}

.pop-up-p {
    font-size: .9rem;
    font-weight: 400;
}

.close {
    font-size: 1.5rem;
}

/* ============================================================================================================
                                                
                                        HEADER/FOOTER STYLING

===============================================================================================================*/

header,
footer {
    padding: 6vh 6vw;
    display: flex;
    align-items: center;
    justify-content: center;
}

header {
    z-index: 3;
}

footer {
    flex-direction: column;
}

footer p a:hover {
    text-decoration: underline;
}

.header-left,
.header-right {
    width: 50%;
}

.header-left {
    float: left;
}

.header-right {
    float: right;
}

.header-right ul {
    display: flex;
    justify-content: flex-end;
    list-style-type: none;
    align-items: center;
}

#font-button,
#theme-button {
    margin-right: 30px;
}

#logo {
    height: 40px;
}

.header-button {
    height: 22px;
    width: fit-content;
}

#compass-icon {
    display: none;
}

/* ============================================================================================================
                                                
                                            NAV STYLING

===============================================================================================================*/

nav {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: row;
    display: none;
    opacity: 0;
}

nav ul {
    display: flex;
    flex-direction: column;
    list-style-type: none;
    padding-left: 10vw;
    justify-content: space-evenly;
    height: 75%;
}

.nav-link {
    z-index: 3;
    transition: border .25s ease;
    display: inline-block;
    position: relative;
    padding-bottom: 7px;
}

.nav-link::before {
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;
    width: 0;
    height: 6px;
    background-color: var(--yellow);
    transition: width .25s ease-out;
}

.nav-link:hover::before,
.nav-link:focus::before {
    width: 100%;
}

/* ============================================================================================================
                                                
                                       HOME PAGE STYLING

===============================================================================================================*/

.home {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.name {
    letter-spacing: 1px;
}

.home h2 {
    border-top: 2px dashed currentColor;
    border-bottom: 2px dashed currentColor;
    padding: 5px;
    width: fit-content;
}

.home h2 {
    margin: 5px 0 7px;
}

.home-links-container {
    display: flex;
    justify-content: space-between;
    width: fit-content;
    flex-direction: column;
}

.home-link-wrapper:hover,
.home-link-wrapper:focus {
    transform: scale(1.2);
}

.home-link-wrapper:first-of-type {
    margin: 10px 0px;
}

.arrow,
.download,
.pdf {
    margin-right: 10px;
}

footer p {
    text-align: center;
}
/* ... */

